Fix banner items clipping

--- a/src/styles/Banner.css
+++ b/src/styles/Banner.css
@@ -3,7 +3,6 @@
     display: flex;
     padding: 2rem;
     gap: 1rem;
-    max-height: 10rem;
     border-radius: .5rem;
     background-color: var(--c-mid-background);
     border: 1px solid var(--c-major-background);
@@ -53,8 +52,10 @@
 .banner__avatar-container {
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: .5rem;
 }
 
 .banner__level {
@@ -66,7 +67,7 @@
     color: #ecf1f3;
     border-radius: .5rem;
     box-shadow: 0 .5rem 1rem var(--c-shadow);
-    position: absolute;
+    /* position: absolute; */
 }
 
 .banner__avatar {
